Initial commit - RentVideo project with JWT auth, video & rental management