@@ -1,60 +1,90 @@
 package com.example.rentvideo.controller;
 
-import com.example.rentvideo.service.AuthService;
+import com.example.rentvideo.model.Role;
 import com.example.rentvideo.model.User;
-import com.example.rentvideo.repository.UserRepository;
+import com.example.rentvideo.security.JwtUtil;
+import com.example.rentvideo.service.UserService;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Map;
+import java.util.Collections;
 
 @RestController
 @RequestMapping("/auth")
 public class AuthController {
 
     @Autowired
-    private AuthService authService;
+    private UserService userService;
 
     @Autowired
-    private UserRepository userRepository;
+    private PasswordEncoder passwordEncoder;
 
-    // Login endpoint
-    @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody Map<String, String> loginData) {
-        try {
-            String email = loginData.get("email");
-            String password = loginData.get("password");
+    @Autowired
+    private AuthenticationManager authenticationManager;
 
-            String token = authService.login(email, password);
+    @Autowired
+    private JwtUtil jwtUtil;
 
-            return ResponseEntity.ok(Map.of(
-                    "email", email,
-                    "token", token
-            ));
-        } catch (Exception e) {
-            return ResponseEntity
-                    .badRequest()
-                    .body(Map.of("error", e.getMessage()));
+    // --------------------- REGISTER ---------------------
+    @PostMapping("/register")
+    public ResponseEntity<?> registerUser(@RequestBody RegisterRequest request) {
+        if (userService.findByEmail(request.getEmail()).isPresent()) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body("User already exists with this email");
         }
+
+        User user = new User();
+        user.setEmail(request.getEmail());
+        user.setFirstName(request.getFirstName());
+        user.setLastName(request.getLastName());
+        user.setRole(request.getRole() != null ? request.getRole() : Role.CUSTOMER);
+
+        user.setPassword(passwordEncoder.encode(request.getPassword()));
+        userService.saveUser(user);
+
+        return ResponseEntity.ok("User registered successfully");
     }
 
-    // Optional: Register endpoint
-    @PostMapping("/register")
-    public ResponseEntity<?> register(@RequestBody User user) {
-        if (userRepository.findByEmail(user.getEmail()).isPresent()) {
-            return ResponseEntity
-                    .badRequest()
-                    .body(Map.of("error", "Email already exists"));
+    // --------------------- LOGIN ---------------------
+    @PostMapping("/login")
+    public ResponseEntity<?> loginUser(@RequestBody LoginRequest request) {
+        try {
+            authenticationManager.authenticate(
+                    new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword())
+            );
+        } catch (BadCredentialsException e) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Invalid email or password");
         }
 
-        // Encrypt password before saving
-        user.setPassword(authService.encodePassword(user.getPassword()));
-        User savedUser = userRepository.save(user);
+        final User user = userService.findByEmail(request.getEmail()).get();
+        final String token = jwtUtil.generateToken(user);
 
-        return ResponseEntity.ok(Map.of(
-                "message", "User registered successfully",
-                "user", savedUser.getEmail()
-        ));
+        return ResponseEntity.ok(Collections.singletonMap("token", token));
+    }
+
+    // --------------------- REQUEST CLASSES ---------------------
+    @Data @NoArgsConstructor @AllArgsConstructor
+    public static class RegisterRequest {
+        private String email;
+        private String password;
+        private String firstName;
+        private String lastName;
+        private Role role;
+    }
+
+    @Data @NoArgsConstructor @AllArgsConstructor
+    public static class LoginRequest {
+        private String email;
+        private String password;
     }
 }
